--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,4 +1,4 @@
 configuracion.texto=Configurando ambiente de desarrollo...
-configuracion.autor.nombre=Jose Vargas Hidalgo
+configuracion.autor.nombre=Jose Miguel Vargas Hidalgo
 configuracion.autor.email=jose.vargas@puntored.co
 
